saves/test/demo_full_20240802_193545/always_if/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp always_if_tb.v always_if.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
always_if_tb.v:85: $finish called at 10000 (1ps)

iverilog cmd 2 error:

